--- a/notebooks/02-prompt-engineering-advanced-techniques.ipynb
+++ b/notebooks/02-prompt-engineering-advanced-techniques.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "0955e5fb",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "f2fafb87",
    "metadata": {},
    "outputs": [],
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "f2b538d0",
    "metadata": {},
    "outputs": [
@@ -157,7 +157,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de9c0a5b",
+   "id": "30ee85f4",
    "metadata": {},
    "source": [
     "**Products 🛒**"
@@ -255,8 +255,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "668b55c1",
+   "execution_count": 4,
+   "id": "31698d50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d94ba528",
+   "id": "1e7c1753",
    "metadata": {},
    "source": [
     "Para determinar qué opción es más conveniente, podemos calcular el precio por barra en cada alternativa (precio unitario). A continuación, seleccionar la opción más económica. Siguiendo este razonamiento, descubrimos que Dove Beauty Bar 14 barras es la opción más económica con un precio unitario de $1,14 (-22% por barra que Dove Beauty Bar 1 barras)."
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "252f1cf1",
+   "id": "2f10c1a4",
    "metadata": {},
    "source": [
     "**Reasoning 🧠**"
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "214b7040",
+   "id": "3c13b2ef",
    "metadata": {},
    "source": [
     "```\n",
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ea1839c",
+   "id": "98401784",
    "metadata": {},
    "source": [
     "Veamos si GPT-4 es lo suficientemente inteligente como para resolver este problema con un simple prompt. Además, con el espíritu de hacer ejemplos más limpios y fáciles de leer, separaremos las instrucciones del sistema del resto de la entrada usando Python [string literals](https://docs.python.org/3/reference/lexical_analysis.html#formatted-string-literals)."
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d6c0478",
+   "id": "666c56dc",
    "metadata": {},
    "source": [
     "**Prompt 💬**"
@@ -336,8 +336,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "32df22ae",
+   "execution_count": 5,
+   "id": "0e82799c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32df29b7",
+   "id": "739531a5",
    "metadata": {},
    "source": [
     "**Response 🤖** &nbsp;&nbsp;<span class=\"label success\">GPT-4</span>"
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50f4e3b8",
+   "id": "8c7f6e19",
    "metadata": {},
    "source": [
     "```python\n",
@@ -368,15 +368,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "40a18e7e",
+   "execution_count": 6,
+   "id": "8c3ffa82",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Based on the prices provided, the best option would be the Dove Beauty Bar 4 bars pack priced at $6.47.\n"
+      "Based on the prices provided, the best option would be Dove Beauty Bar 1 bars priced at $1.47.\n"
      ]
     }
    ],
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82fff126",
+   "id": "fedbcc3f",
    "metadata": {},
    "source": [
     "El modelo eligió la opción más barata en función del precio total en lugar de calcular el precio unitario e identificar una oportunidad de ahorro comprando más barras. Vale la pena señalar cierta ambigüedad en la pregunta. ¿Qué significa la mejor opción? ¿Significa la más barata o la que maximiza un ahorro de dinero a largo plazo?\n",
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6714c307",
+   "id": "abf86a25",
    "metadata": {},
    "source": [
     "**Prompt 💬**"
@@ -406,8 +406,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "b152551b",
+   "execution_count": 7,
+   "id": "2ed09b66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86aade2a",
+   "id": "c03ac9a1",
    "metadata": {},
    "source": [
     "**Response 🤖** &nbsp;&nbsp;<span class=\"label success\">GPT-4</span>"
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "feb6837a",
+   "id": "ad9da399",
    "metadata": {},
    "source": [
     "```python\n",
@@ -447,43 +447,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "b9089232",
+   "execution_count": 8,
+   "id": "c2b9d14a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "To identify the best money-saving opportunity, we need to compare the prices of the different product presentations. \n",
+      "To identify the presentation that offers the best money-saving opportunity, we need to compare the prices per bar of each product. \n",
       "\n",
-      "The first option is the Dove Men+Care 8 bars pack, priced at $9.99.\n",
+      "1. Dove Men+Care 8 bars pack:\n",
+      "   - Price: $9.99\n",
+      "   - Price per bar: $9.99 / 8 bars = $1.249 per bar\n",
       "\n",
-      "The second option is the Dove Beauty Bar 4 bars pack, priced at $6.47.\n",
+      "2. Dove Beauty Bar 4 bars pack:\n",
+      "   - Price: $6.47\n",
+      "   - Price per bar: $6.47 / 4 bars = $1.6175 per bar\n",
       "\n",
-      "The third option is the Dove Beauty Bar 1 bar, priced at $1.47.\n",
+      "3. Dove Beauty Bar 1 bar:\n",
+      "   - Price: $1.47\n",
+      "   - Price per bar: $1.47 / 1 bar = $1.47 per bar\n",
       "\n",
-      "The fourth option is the Dove Beauty Bar 14 bars pack, priced at $16.\n",
+      "4. Dove Beauty Bar 14 bars pack:\n",
+      "   - Price: $16\n",
+      "   - Price per bar: $16 / 14 bars = $1.1429 per bar\n",
       "\n",
-      "The fifth option is the Yardley London Soap Bar (Pack of 10), priced at $19.99.\n",
+      "5. Yardley London Soap Bar (Pack of 10):\n",
+      "   - Price: $19.99\n",
+      "   - Price per bar: $19.99 / 10 bars = $1.999 per bar\n",
       "\n",
-      "The sixth option is the Dr. Squatch All Natural Bar Soap for Men, 5 Bar Variety Pack, priced at $46.45.\n",
+      "6. Dr. Squatch All Natural Bar Soap for Men, 5 Bar Variety Pack:\n",
+      "   - Price: $46.45\n",
+      "   - Price per bar: $46.45 / 5 bars = $9.29 per bar\n",
       "\n",
-      "By comparing the prices, we can see that the Dove Beauty Bar 1 bar is the cheapest option at $1.47. However, it is important to consider the number of bars included in each pack to make a fair comparison.\n",
-      "\n",
-      "The Dove Men+Care 8 bars pack offers 8 bars for $9.99, making each bar cost approximately $1.25 (9.99 / 8).\n",
-      "\n",
-      "The Dove Beauty Bar 4 bars pack offers 4 bars for $6.47, making each bar cost approximately $1.62 (6.47 / 4).\n",
-      "\n",
-      "The Dove Beauty Bar 1 bar costs $1.47.\n",
-      "\n",
-      "The Dove Beauty Bar 14 bars pack offers 14 bars for $16, making each bar cost approximately $1.14 (16 / 14).\n",
-      "\n",
-      "The Yardley London Soap Bar pack offers 10 bars for $19.99, making each bar cost approximately $1.99 (19.99 / 10).\n",
-      "\n",
-      "The Dr. Squatch All Natural Bar Soap for Men, 5 Bar Variety Pack, priced at $46.45, offers 5 bars. This makes each bar cost approximately $9.29 (46.45 / 5).\n",
-      "\n",
-      "Based on the calculations, the best money-saving opportunity is the Dove Beauty Bar 14 bars pack, which offers each bar at approximately $1.14.\n"
+      "Based on the price per bar, the presentation that offers the best money-saving opportunity is \"Dove Beauty Bar 14 bars pack\" with a price of $16 and a price per bar of $1.1429.\n"
      ]
     }
    ],
@@ -495,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d1c07ab",
+   "id": "ab32f4dc",
    "metadata": {},
    "source": [
     "Notar que con el nuevo prompt, el modelo da una respuesta correcta y, al mismo tiempo, tenemos un razonamiento paso a paso que es más fácil de debugear y encontrar posibles errores. Aún más, es bastante impresionante cómo agregando las palabras mágicas \"reasoning step-by-step\" en el prompt, se produce una diferencia significativa en la salida del modelo. ¿Cuál es el truco?\n",
@@ -522,7 +520,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "191aef5d",
+   "id": "2485862a",
    "metadata": {},
    "source": [
     "**Prompt 💬**"
@@ -530,8 +528,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "63071076",
+   "execution_count": 9,
+   "id": "b04f1570",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +545,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04834394",
+   "id": "debb7609",
    "metadata": {},
    "source": [
     "Se alienta al lector, a que hagas tus propios experimentos y encuentre la mejor oferta. Encontrará que el modelo está en lo correcto."
@@ -555,7 +553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0f3e99c",
+   "id": "2eae01a8",
    "metadata": {},
    "source": [
     "**Response 🤖** &nbsp;&nbsp;<span class=\"label success\">GPT-4</span>"
@@ -563,7 +561,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f372acc9",
+   "id": "ba015535",
    "metadata": {},
    "source": [
     "```python\n",
@@ -573,7 +571,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb82228f",
+   "id": "92a7a4a2",
    "metadata": {},
    "source": [
     "Por más increíble que parezca, este sencillo truco le permite al modelo inferir una cadena de razonamiento similar y lograr resultados aún más precisos que con la técnica anterior. Además, tenga en cuenta que no estamos codificando un procedimiento paso a paso para resolver el problema. Por lo tanto, este enfoque debería ser, en teoría, lo suficientemente flexible para resolver cualquier desafío similar, basándose únicamente en las habilidades de razonamiento del modelo."
@@ -581,26 +579,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "5ce15b75",
+   "execution_count": 10,
+   "id": "3a6771f2",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A: To determine the lowest price by fluid ounce, we need to calculate the price per fluid ounce for each presentation.\n",
-      "\n",
-      "Presentation 1: 24-pack of 12 fl oz cans for $11.86\n",
-      "Price per fluid ounce = 11.86 / (24 x 12) = 0.163 / fl oz\n",
-      "\n",
-      "Presentation 2: 12-pack of 12 fl oz cans for $7.46\n",
-      "Price per fluid ounce = 7.46 / (12 x 12) = 0.052 / fl oz\n",
-      "\n",
-      "Presentation 3: 6-pack of 16.9 fl oz bottles for $4.98\n",
-      "Price per fluid ounce = 4.98 / (6 x 16.9) = 0.049 / fl oz\n",
-      "\n",
-      "Based on the calculations, Presentation 3 has the lowest price per fluid ounce at $0.049.\n"
+      "A: Presentation 1, the x24 pack of 12 fl oz cans, costs $11.86. So the price per fluid ounce would be 11.86/(24 x 12) = 0.041 per fluid ounce. Presentation 2, the x12 pack of 12 fl oz cans, costs $7.46. So the price per fluid ounce would be 7.46/(12 x 12) = 0.051 per fluid ounce. Presentation 3, the x6 pack of 16.9 fl oz bottles, costs $4.98. So the price per fluid ounce would be 4.98/(6 x 16.9) = 0.049 per fluid ounce. In conclusion, the cheapest presentation is the first one with a price of 0.041 per fluid ounce.\n"
      ]
     }
    ],
@@ -637,7 +624,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c2c4486",
+   "id": "b3f8b96c",
    "metadata": {},
    "source": [
     "**Products 🛒**"
@@ -645,8 +632,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "bb2794c3",
+   "execution_count": 11,
+   "id": "43e0cb8c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -680,7 +667,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "943044d4",
+   "id": "e0d211eb",
    "metadata": {},
    "source": [
     "Agreguemos algunas preferencias de usuario como parte del prompt, para hacer el problema un poquito más desafiante para el modelo."
@@ -688,8 +675,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0fa91b19",
+   "execution_count": 12,
+   "id": "327a3e7b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -702,7 +689,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee3c9e12",
+   "id": "213cae41",
    "metadata": {},
    "source": [
     "Utilizando modelos poderosos como GPT-3/GPT-4, un prompt Zero-Shot CoT como el siguiente debería ser suficiente para obtener resultados descentes. "
@@ -710,7 +697,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "446a7977",
+   "id": "aac421a9",
    "metadata": {},
    "source": [
     "**Prompt 💬**"
@@ -718,22 +705,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "2fe85afe",
+   "execution_count": 13,
+   "id": "dd4c345a",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'preferences' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[15], line 6\u001b[0m\n\u001b[1;32m      1\u001b[0m prompt \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;124mYou will be provided with a list of various product presentations delimited by <>. Each product presentation is accompanied by its price. Your task is to identify which presentation offers the best money-saving opportunity, reasoning step-by-step:\u001b[39m\n\u001b[1;32m      3\u001b[0m \n\u001b[1;32m      4\u001b[0m \u001b[38;5;124mAlso, consider the following user preferences to select the most suitable ooption:\u001b[39m\n\u001b[1;32m      5\u001b[0m \n\u001b[0;32m----> 6\u001b[0m \u001b[38;5;132;01m{\u001b[39;00mpreferences\u001b[38;5;132;01m}\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \n\u001b[1;32m      8\u001b[0m \u001b[38;5;124m<\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mproducts\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m>\u001b[39m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;124m\"\"\"\u001b[39m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'preferences' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "prompt = f\"\"\"\n",
     "You will be provided with a list of various product presentations delimited by <>. Each product presentation is accompanied by its price. Your task is to identify which presentation offers the best money-saving opportunity, reasoning step-by-step:\n",
@@ -748,7 +723,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c401796",
+   "id": "ddb5f009",
    "metadata": {},
    "source": [
     "**Response 🤖** &nbsp;&nbsp;<span class=\"label success\">GPT-4</span>"
@@ -756,7 +731,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d642d3e4",
+   "id": "8230fd7f",
    "metadata": {},
    "source": [
     "```python\n",
@@ -823,7 +798,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0f38e4f",
+   "id": "c272f07d",
    "metadata": {},
    "source": [
     "A pesar de que el modelo no produce resultados incorrectos en ninguna de sus ejecuciones (con un razonamiento preciso en las tres instancias), este ejemplo enfatiza el potencial de variabilidad en las respuestas de un LLM. Además, subraya el valor del método self-consistency en la reducción de dicha variabilidad.\n",
@@ -835,15 +810,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "6e3c0718",
+   "execution_count": 14,
+   "id": "8dedec92",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A: Presentation 1 costs $11.86 and includes 24 cans, so the price per fluid ounce is $11.86/(24 x 12) = $0.041 per fluid ounce. Presentation 2 costs $7.46 and includes 12 cans, so the price per fluid ounce is $7.46/(12 x 12) = $0.051 per fluid ounce. Presentation 3 costs $4.98 and includes 6 bottles, so the price per fluid ounce is $4.98/(6 x 16.9) = $0.049 per fluid ounce. In conclusion, the cheapest presentation is the first one with a price of $0.041 per fluid ounce.\n"
+      "To identify the best money-saving opportunity, we need to consider the user preferences provided:\n",
+      "\n",
+      "1. Only consider grade AA eggs.\n",
+      "   - Going through the list, we can see that the following presentations meet this requirement:\n",
+      "     - Great Value Cage Free Large AA White Eggs, 6 Count: $1.07\n",
+      "     - Eggland's Best Farm Fresh Cage Free Large White Grade AA Eggs, 18 Count: $2.69\n",
+      "\n",
+      "2. Only consider eggs produced on cage-free farms.\n",
+      "   - The presentations that satisfy this preference are:\n",
+      "     - Great Value Cage Free Large AA White Eggs, 6 Count: $1.07\n",
+      "     - Happy Egg Organic Free Range Large Brown Eggs, 12 Count: $5.16\n",
+      "     - Great Value Cage Free Large AA White Eggs, 12 Count: $1.86\n",
+      "     - Eggland's Best Farm Fresh Cage Free Large White Grade AA Eggs, 18 Count: $2.69\n",
+      "     - Marketside Large Cage Free Brown Eggs, 12 Count: $2.67\n",
+      "\n",
+      "3. The client needs a minimum of 6 eggs and a maximum of 12.\n",
+      "   - The presentations that fulfill this requirement are:\n",
+      "     - Great Value Cage Free Large AA White Eggs, 6 Count: $1.07\n",
+      "     - Happy Egg Organic Free Range Large Brown Eggs, 12 Count: $5.16\n",
+      "     - Great Value Cage Free Large AA White Eggs, 12 Count: $1.86\n",
+      "     - Marketside Large Cage Free Brown Eggs, 12 Count: $2.67\n",
+      "\n",
+      "Now, let's compare the prices of the presentations that meet all the user preferences:\n",
+      "\n",
+      "- Great Value Cage Free Large AA White Eggs, 6 Count: $1.07\n",
+      "- Great Value Cage Free Large AA White Eggs, 12 Count: $1.86\n",
+      "- Marketside Large Cage Free Brown Eggs, 12 Count: $2.67\n",
+      "\n",
+      "Among these options, the Great Value Cage Free Large AA White Eggs, 6 Count at $1.07 offer the best money-saving opportunity as it provides the required number of eggs at the lowest price.\n"
      ]
     }
    ],
