Add instructions to setup API Key OpenAI to notebooks

--- a/notebooks/01-prompt-engineering-basic-techniques.ipynb
+++ b/notebooks/01-prompt-engineering-basic-techniques.ipynb
@@ -66,16 +66,13 @@
     "### 1. OpenAI API Key setup\n",
     "<a class=\"anchor\" id=\"openai-api-setup\"></a>\n",
     "\n",
-    "ToDo"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9da5116d",
-   "metadata": {},
-   "source": [
-    "* Mostrar con capturas de pantalla o similar como configurar una API Key de OpenAI desde el panel de control para utilizar aquí. También hacer hincaṕie en que vamos a proveerlas nosotros a los efectos del bootcamp.\n",
-    "* Mostrar como poner la API key en .env para que no quede harcodeada en el notebook"
+    "Para crear una API_Key de OpenAI hace falta tener una cuenta creada asociada a una tarjeta de crédito válida para realizar el cargo mensual de los costos asociados. \n",
+    "\n",
+    "Una vez que se tiene una cuenta, dirigirse al la barra de Menú a la izquierda y desplegar el menú que se encuentra en la opción \"Personal\". Luego seleccionar \"View API Keys\". Esto nos llevará a una pantalla donde vemos todas las API Key creadas para esta cuenta (si recién nos creamos la cuenta no tendremos ninguna).\n",
+    "\n",
+    "Aquí seleccionar el botón \"Create New Secret Key\". Elegir un nombre nemotécnico para la misma (asi luego la podemos identificar entre el resto) y copiar el secret_key generado. Es importante guardar este secret_key ya que será lo que utilizaremos desde nuestro código para interactuar con la API de OpenAI. Una vez que cerremos el diálogo ya no podremos volver a verlo. Por lo tanto, asegurarse de copiar y guardar a salvo el mismo.\n",
+    "\n",
+    "<img src=\"../figures/open_ai_key_1.png\" alt=\"\" />\n"
    ]
   },
   {
@@ -83,6 +80,8 @@
    "id": "0132ef76",
    "metadata": {},
    "source": [
+    "**Manejo de API Keys en los notebooks**\n",
+    "\n",
     "Para simplificar el manejo de las API Keys y evitar que queden \"harcodeadas\" en este notebook, utilizamos la librería [python-dotenv](https://pypi.org/project/python-dotenv/) que permite facilmente cargar variables de entorno definidas en un archivo local. En pocas palabras, lo único que necesitamos asegurarnos es que exista un archivo de nombre `.env` en la raiź de este proyecto, con el siguiente contenido:\n",
     "\n",
     "\n",
@@ -203,26 +202,6 @@
     "\n",
     "</style>\n",
     "\"\"\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "4048fcc8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# data = pd.read_csv(\"../data/faqs.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "a2e6808a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# data"
    ]
   },
   {
@@ -1557,32 +1536,11 @@
     "## Tercer Principio: Balancear especificidad y creatividad\n",
     "<a class=\"anchor\" id=\"allow-creativity\"></a>\n",
     "\n",
-    "🔝 [Ir al Índice](#index)"
+    "🔝 [Ir al Índice](#index)\n",
+    "\n",
+    "\n",
+    "**DEMO DESDE PLAYGROUND OPEN AI**"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "06e5b25b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c99e6004",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d0e8b790",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
