--- a/notebooks/02-prompt-engineering-advanced-techniques.ipynb
+++ b/notebooks/02-prompt-engineering-advanced-techniques.ipynb
@@ -56,7 +56,13 @@
     "### 1. OpenAI API Key setup\n",
     "<a class=\"anchor\" id=\"openai-api-setup\"></a>\n",
     "\n",
-    "ToDo"
+    "Para crear una API_Key de OpenAI hace falta tener una cuenta creada asociada a una tarjeta de crédito válida para realizar el cargo mensual de los costos asociados. \n",
+    "\n",
+    "Una vez que se tiene una cuenta, dirigirse al la barra de Menú a la izquierda y desplegar el menú que se encuentra en la opción \"Personal\". Luego seleccionar \"View API Keys\". Esto nos llevará a una pantalla donde vemos todas las API Key creadas para esta cuenta (si recién nos creamos la cuenta no tendremos ninguna).\n",
+    "\n",
+    "Aquí seleccionar el botón \"Create New Secret Key\". Elegir un nombre nemotécnico para la misma (asi luego la podemos identificar entre el resto) y copiar el secret_key generado. Es importante guardar este secret_key ya que será lo que utilizaremos desde nuestro código para interactuar con la API de OpenAI. Una vez que cerremos el diálogo ya no podremos volver a verlo. Por lo tanto, asegurarse de copiar y guardar a salvo el mismo.\n",
+    "\n",
+    "<img src=\"../figures/open_ai_key_1.png\" alt=\"\" />\n"
    ]
   },
   {
@@ -64,6 +70,8 @@
    "id": "4a813752",
    "metadata": {},
    "source": [
+    "**Manejo de API Keys en los notebooks**\n",
+    "\n",
     "Para simplificar el manejo de las API Keys y evitar que queden \"harcodeadas\" en este notebook, utilizamos la librería [python-dotenv](https://pypi.org/project/python-dotenv/) que permite facilmente cargar variables de entorno definidas en un archivo local. En pocas palabras, lo único que necesitamos asegurarnos es que exista un archivo de nombre `.env` en la raiź de este proyecto, con el siguiente contenido:\n",
     "\n",
     "\n",
